<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_4"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/bnOpenDevice"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_48"
                    android:text="@string/TextOpen" />

                <Button
                    android:id="@+id/bnScanBarcode"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_48"
                    android:text="@string/TextDecode" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_48"
                    android:gravity="center"
                    android:text="@string/TextSerialName" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/spCommtype"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_48"
                    android:entries="@array/comm_type"
                    android:dropDownVerticalOffset="0dp"
                    android:overlapAnchor="false"
                    android:spinnerMode="dropdown" />

                <Button
                    android:id="@+id/bnGetDeviceInfo"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_48"
                    android:text="@string/TextGetInfo" />

                <EditText
                    android:id="@+id/editSerialname"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_48"
                    android:background="@android:drawable/edit_text"
                    android:singleLine="true"
                    android:text="@string/dev_com"
                    tools:ignore="LabelFor" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/bnScanEnable"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_48"
                    android:text="@string/EnableRead" />

                <Button
                    android:id="@+id/bnClearResult"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_48"
                    android:text="@string/TextClear" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_48"
                    android:gravity="center"
                    android:text="@string/TextSerailBaud" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/bnRestartDevice"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_48"
                    android:text="@string/TextRestart" />

                <Button
                    android:id="@+id/bnSenseMode"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_48"
                    android:text="@string/TextSenseMode" />

                <EditText
                    android:id="@+id/editBaud"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_48"
                    android:background="@android:drawable/edit_text"
                    android:digits="0123456789"
                    android:inputType="number"
                    android:singleLine="true"
                    android:text="@string/baud"
                    tools:ignore="LabelFor" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/TextUnityCommand" />

            <EditText
                android:id="@+id/editConfig"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:autofillHints="@string/TextQueryCommand"
                android:background="@android:drawable/edit_text"
                android:gravity="top"
                android:inputType="text"
                android:overScrollMode="always"
                android:scrollbars="vertical"
                android:singleLine="false"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/bnQueCfg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TextGetCfg" />

            <Button
                android:id="@+id/bnGetImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TextGetImg" />

            <Button
                android:id="@+id/bnEncode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/barcode_encode" />

        </LinearLayout>

        <EditText
            android:id="@+id/etResult"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@android:drawable/edit_text"
            android:gravity="top"
            android:overScrollMode="always"
            android:scrollbars="vertical"
            android:singleLine="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/txtFilePath"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="2"
                android:autofillHints="@string/SelectFile"
                android:background="@android:drawable/edit_text"
                android:gravity="center|start"
                android:inputType="text"
                android:scrollbars="vertical"
                android:singleLine="false"
                tools:ignore="LabelFor,TextViewEdits" />

            <Button
                android:id="@+id/bnUpdateFirmware"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TextUpdate" />

            <Button
                android:id="@+id/bnUpdateConfig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TextUpdateConfig" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/pbUpdate"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="0" />
    </LinearLayout>
</layout>
